apps/nginx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-sample
  namespace: default
spec:
  selector:
    app: nginx-sample
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
