apps/nginx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-sample
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  - host: 10.255.0.29
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-sample
            port:
              number: 80
